tests/cases/fail/missing_return_branch.p4
def classify(x: int) -> int:
    if x > 0:
        return x

def main() -> None:
    print(classify(1))
